Fix connected device detail page slice items are in smaller font size
- Increase font size of slice items

Bug: 223502042
Test: build pass
Change-Id: I48ac0ff9734c467cc9c1cd0fa0e2b40ea02ecfa3

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -524,6 +524,13 @@
         <item name="rowStyle">@style/SliceRow.Slider</item>
     </style>
 
+    <style name="Widget.SliceView.Bluetooth">
+        <item name="titleSize">20dp</item>
+        <item name="subtitleSize">14dp</item>
+        <item name="headerTitleSize">20dp</item>
+        <item name="headerSubtitleSize">14dp</item>
+    </style>
+
     <style name="Widget.SliceView.Panel.Slider.LargeIcon">
         <item name="rowStyle">@style/SliceRow.Slider.LargeIcon</item>
     </style>
