--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -51,6 +51,10 @@
     <!-- no translation found for dark_ui_scheduler_preference_titles:0 (7465697698048662118) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:1 (4057198235664064478) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:2 (8842756744447000897) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:0 (8160793372964333729) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:1 (1570862084158925417) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:2 (1527300254382984555) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:3 (5231566512901956369) -->
   <string-array name="lock_after_timeout_entries">
     <item msgid="2223808927866488981">"ତୁରନ୍ତ"</item>
     <item msgid="463591454172790676">"5 ସେକେଣ୍ଡ"</item>
@@ -251,7 +255,7 @@
     <item msgid="5167716820004184705">"SMS ପଠାନ୍ତୁ"</item>
     <item msgid="3834284815734286927">"ICC SMS ପଢ଼ନ୍ତୁ"</item>
     <item msgid="6394881108820762646">"ICC SMS ଲେଖନ୍ତୁ"</item>
-    <item msgid="3275060808384314406">"ସେଟିଙ୍ଗରେ ସଂଶୋଧନ କରନ୍ତୁ"</item>
+    <item msgid="3275060808384314406">"ସେଟିଂସ ପରିବର୍ତ୍ତନ କରନ୍ତୁ"</item>
     <item msgid="8672921438869137431">"ସ୍କ୍ରୀନ୍‌ର ଉପର ଭାଗରେ ଆଙ୍କନ୍ତୁ"</item>
     <item msgid="346101114322879720">"ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ଆକ୍‌ସେସ୍‌ କରନ୍ତୁ"</item>
     <item msgid="4760681822601767255">"କ୍ୟାମେରା"</item>
@@ -318,7 +322,7 @@
     <item msgid="9189359977063200554">"SMS/MMS ପଠାନ୍ତୁ"</item>
     <item msgid="6954817837534799424">"SMS/MMS ପଢ଼ନ୍ତୁ"</item>
     <item msgid="7921014514153395846">"SMS/MMS ଲେଖନ୍ତୁ"</item>
-    <item msgid="8997371825401751421">"ସେଟିଙ୍ଗଗୁଡ଼ିକ ବଦଳାନ୍ତୁ"</item>
+    <item msgid="8997371825401751421">"ସେଟିଂସ ବଦଳାନ୍ତୁ"</item>
     <item msgid="7005755175240764443">"ଉପର ଭାଗରେ ଆଙ୍କନ୍ତୁ"</item>
     <item msgid="8267704990417682222">"ବିଜ୍ଞପ୍ତି ଆକସେସ୍‌ କରନ୍ତୁ"</item>
     <item msgid="3180676986290096851">"କ୍ୟାମେରା"</item>
@@ -385,16 +389,9 @@
   <string-array name="captioning_font_size_selector_titles">
     <item msgid="923916134548435468">"ବହୁତ ଛୋଟ"</item>
     <item msgid="5738147437573674872">"ଛୋଟ"</item>
-    <item msgid="3942006483573485941">"ଡିଫଲ୍ଟ"</item>
+    <item msgid="4691660235626027304">"ମଧ୍ୟମ"</item>
     <item msgid="824386705928670045">"ବହୁତ ବଡ଼"</item>
     <item msgid="2790561781512874585">"ବହୁତ ବଡ଼"</item>
-  </string-array>
-  <string-array name="captioning_font_size_selector_summaries">
-    <item msgid="5700290209695344464">"ଅତ୍ୟଧିକ ଛୋଟ ଟେକ୍ସଟ୍ ଆକାର"</item>
-    <item msgid="4400431625665186389">"ଛୋଟ ଟେକ୍ସଟ୍ ଆକାର"</item>
-    <item msgid="2340994108094808362">"ଡିଫଲ୍ଟ ଟେକ୍ସଟ୍ ଆକାର"</item>
-    <item msgid="6446684863055375405">"ବଡ଼ ଟେକ୍ସଟ୍ ଆକାର"</item>
-    <item msgid="6838252010935384975">"ଅତ୍ୟଧିକ ବଡ଼ ଟେକ୍ସଟ୍ ଆକାର"</item>
   </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"ଡିଫଲ୍ଟ"</item>
@@ -581,8 +578,17 @@
     <!-- no translation found for rtt_setting_mode:1 (7903019313228349427) -->
     <!-- no translation found for rtt_setting_mode:2 (8525285145696236811) -->
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
-    <!-- no translation found for nfc_payment_favor:0 (9104058551372383947) -->
-    <!-- no translation found for nfc_payment_favor:1 (5283665583617307336) -->
-    <!-- no translation found for nfc_payment_favor_values:0 (2373999996715432397) -->
-    <!-- no translation found for nfc_payment_favor_values:1 (5305176997036663262) -->
+  <string-array name="nfc_payment_favor">
+    <item msgid="9104058551372383947">"ସର୍ବଦା"</item>
+    <item msgid="5283665583617307336">"ଅନ୍ୟ ଏକ ପେମେଣ୍ଟ ଆପ ଖୋଲା ଥିବା ସମୟ ବ୍ୟତୀତ"</item>
+  </string-array>
+  <string-array name="nfc_payment_favor_values">
+    <item msgid="2373999996715432397">"0"</item>
+    <item msgid="5305176997036663262">"1"</item>
+  </string-array>
+  <string-array name="switch_to_user_zero_when_docked_timeout_entries">
+    <item msgid="4844842227131211168">"କେବେ ବି ନୁହେଁ"</item>
+    <item msgid="5065465585332446709">"1 ମିନିଟ ପରେ"</item>
+    <item msgid="622807566366131941">"5 ମିନିଟ ପରେ"</item>
+  </string-array>
 </resources>
