--- a/res/values-ta/arrays.xml
+++ b/res/values-ta/arrays.xml
@@ -51,6 +51,10 @@
     <!-- no translation found for dark_ui_scheduler_preference_titles:0 (7465697698048662118) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:1 (4057198235664064478) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:2 (8842756744447000897) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:0 (8160793372964333729) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:1 (1570862084158925417) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:2 (1527300254382984555) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:3 (5231566512901956369) -->
   <string-array name="lock_after_timeout_entries">
     <item msgid="2223808927866488981">"உடனடியாக"</item>
     <item msgid="463591454172790676">"5 வினாடிகள்"</item>
@@ -259,7 +263,7 @@
     <item msgid="5612873260709742213">"ஆடியோவை இயக்கு"</item>
     <item msgid="2027206403725749996">"கிளிப்போர்டைப் படி"</item>
     <item msgid="5643742956725663156">"கிளிப்போர்ட்டை மாற்று"</item>
-    <item msgid="7362845549479684378">"மீடியா பொத்தான்கள்"</item>
+    <item msgid="7362845549479684378">"மீடியா பட்டன்கள்"</item>
     <item msgid="3843484466100107397">"ஆடியோவை மையப்படுத்து"</item>
     <item msgid="617344340943430125">"முதன்மை ஒலியளவு"</item>
     <item msgid="1249691739381713634">"குரல் ஒலியளவு"</item>
@@ -326,7 +330,7 @@
     <item msgid="1444183972646890539">"ஆடியோவை இயக்கு"</item>
     <item msgid="4337542044275236638">"கிளிப்போர்டைப் படி"</item>
     <item msgid="2681224211796661809">"கிளிப்போர்ட்டை மாற்று"</item>
-    <item msgid="4479361062226474111">"மீடியா பொத்தான்கள்"</item>
+    <item msgid="4479361062226474111">"மீடியா பட்டன்கள்"</item>
     <item msgid="5651140069431283570">"ஆடியோவை மையப்படுத்து"</item>
     <item msgid="745291221457314879">"முதன்மை ஒலியளவு"</item>
     <item msgid="4722479281326245754">"குரல் ஒலியளவு"</item>
@@ -385,16 +389,9 @@
   <string-array name="captioning_font_size_selector_titles">
     <item msgid="923916134548435468">"மிகச் சிறியது"</item>
     <item msgid="5738147437573674872">"சிறியது"</item>
-    <item msgid="3942006483573485941">"இயல்பு"</item>
+    <item msgid="4691660235626027304">"நடுத்தரம்"</item>
     <item msgid="824386705928670045">"பெரியது"</item>
     <item msgid="2790561781512874585">"மிகப் பெரியது"</item>
-  </string-array>
-  <string-array name="captioning_font_size_selector_summaries">
-    <item msgid="5700290209695344464">"மிகச் சிறிய உரை அளவு"</item>
-    <item msgid="4400431625665186389">"சிறிய உரை அளவு"</item>
-    <item msgid="2340994108094808362">"இயல்பான உரை அளவு"</item>
-    <item msgid="6446684863055375405">"பெரிய உரை அளவு"</item>
-    <item msgid="6838252010935384975">"மிகப் பெரிய உரை அளவு"</item>
   </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"இயல்புநிலை"</item>
@@ -581,8 +578,17 @@
     <!-- no translation found for rtt_setting_mode:1 (7903019313228349427) -->
     <!-- no translation found for rtt_setting_mode:2 (8525285145696236811) -->
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
-    <!-- no translation found for nfc_payment_favor:0 (9104058551372383947) -->
-    <!-- no translation found for nfc_payment_favor:1 (5283665583617307336) -->
-    <!-- no translation found for nfc_payment_favor_values:0 (2373999996715432397) -->
-    <!-- no translation found for nfc_payment_favor_values:1 (5305176997036663262) -->
+  <string-array name="nfc_payment_favor">
+    <item msgid="9104058551372383947">"எப்போதும்"</item>
+    <item msgid="5283665583617307336">"மற்றொரு பேமெண்ட் ஆப்ஸ் திறந்திருக்கும் நேரம் தவிர"</item>
+  </string-array>
+  <string-array name="nfc_payment_favor_values">
+    <item msgid="2373999996715432397">"0"</item>
+    <item msgid="5305176997036663262">"1"</item>
+  </string-array>
+  <string-array name="switch_to_user_zero_when_docked_timeout_entries">
+    <item msgid="4844842227131211168">"ஒருபோதுமில்லை"</item>
+    <item msgid="5065465585332446709">"1 நிமிடத்திற்குப் பிறகு"</item>
+    <item msgid="622807566366131941">"5 நிமிடங்களுக்குப் பிறகு"</item>
+  </string-array>
 </resources>
