Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ifbd5a108750f88997c469b01bbddd357e74070c5

--- a/res/values-my/arrays.xml
+++ b/res/values-my/arrays.xml
@@ -580,7 +580,7 @@
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
   <string-array name="nfc_payment_favor">
     <item msgid="9104058551372383947">"အမြဲ"</item>
-    <item msgid="5283665583617307336">"ငွေပေးချေသည့် အက်ပ်ပွင့်နောက်တစ်ခု ပွင့်နေချိန်မှအပ"</item>
+    <item msgid="5283665583617307336">"အခြားငွေပေးချရေး အက်ပ် ပွင့်နေချိန်မှအပ"</item>
   </string-array>
   <string-array name="nfc_payment_favor_values">
     <item msgid="2373999996715432397">"0"</item>
