--- a/res/values-eu/arrays.xml
+++ b/res/values-eu/arrays.xml
@@ -580,7 +580,7 @@
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
   <string-array name="nfc_payment_favor">
     <item msgid="9104058551372383947">"Beti"</item>
-    <item msgid="5283665583617307336">"Beste ordainketa-aplikazio bat zabalik dagoenean ez ezik"</item>
+    <item msgid="5283665583617307336">"Beste ordainketa-aplikazio bat irekita dagoenean izan ezik"</item>
   </string-array>
   <string-array name="nfc_payment_favor_values">
     <item msgid="2373999996715432397">"0"</item>
