--- a/res/values-ky/arrays.xml
+++ b/res/values-ky/arrays.xml
@@ -580,7 +580,7 @@
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
   <string-array name="nfc_payment_favor">
     <item msgid="9104058551372383947">"Ар дайым"</item>
-    <item msgid="5283665583617307336">"Акы төлөнүүчү башка колдонмо ачылып турган учурларды эске албаганда"</item>
+    <item msgid="5283665583617307336">"Башка төлөм колдонмосу ачылып турбаса гана"</item>
   </string-array>
   <string-array name="nfc_payment_favor_values">
     <item msgid="2373999996715432397">"0"</item>
