--- a/res/values-pa/arrays.xml
+++ b/res/values-pa/arrays.xml
@@ -580,7 +580,7 @@
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
   <string-array name="nfc_payment_favor">
     <item msgid="9104058551372383947">"ਹਮੇਸ਼ਾਂ"</item>
-    <item msgid="5283665583617307336">"ਸਿਵਾਏ ਇਸਦੇ ਜਦੋਂ ਦੂਜਾ ਭੁਗਤਾਨ ਐਪ ਖੁੱਲ੍ਹਾ ਹੋਵੇ"</item>
+    <item msgid="5283665583617307336">"ਸਿਵਾਏ ਇਸਦੇ ਜਦੋਂ ਦੂਜੀ ਭੁਗਤਾਨ ਐਪ ਖੁੱਲ੍ਹੀ ਹੋਵੇ"</item>
   </string-array>
   <string-array name="nfc_payment_favor_values">
     <item msgid="2373999996715432397">"0"</item>
