--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -129,6 +129,12 @@
     <dimen name="search_bar_text_size">20sp</dimen>
     <dimen name="search_bar_corner_radius">28dp</dimen>
     <dimen name="search_bar_content_inset">56dp</dimen>
+    <dimen name="search_bar_padding_start">4dp</dimen>
+    <dimen name="search_bar_padding_start_two_pane">8dp</dimen>
+    <dimen name="search_bar_padding_end">16dp</dimen>
+    <dimen name="search_bar_padding_end_two_pane">24dp</dimen>
+    <dimen name="search_bar_title_padding_start">-4dp</dimen>
+    <dimen name="search_bar_title_padding_start_regular_two_pane">8dp</dimen>
 
     <!-- Avatar -->
     <dimen name="avatar_length">48dp</dimen>
@@ -136,13 +142,16 @@
     <dimen name="avatar_margin_end">24dp</dimen>
     <dimen name="multiple_users_avatar_size">20dp</dimen>
 
-    <!-- Homepage title -->
+    <!-- Homepage -->
     <dimen name="homepage_title_margin_bottom">8dp</dimen>
     <dimen name="homepage_title_margin_horizontal">24dp</dimen>
-
-    <!-- Homepage menu entry -->
-    <dimen name="homepage_menu_entry_padding_horizontal">16dp</dimen>
-    <dimen name="homepage_menu_entry_corner_radius">28dp</dimen>
+    <dimen name="homepage_padding_horizontal_two_pane">24dp</dimen>
+    <dimen name="homepage_preference_corner_radius">28dp</dimen>
+    <dimen name="homepage_preference_min_height">88sp</dimen>
+    <dimen name="homepage_preference_icon_padding_start">32dp</dimen>
+    <dimen name="homepage_preference_icon_padding_start_two_pane">8dp</dimen>
+    <dimen name="homepage_preference_text_padding_start">16dp</dimen>
+    <dimen name="homepage_preference_text_padding_start_two_pane">24dp</dimen>
 
     <!-- Dimensions for Wifi Assistant Card -->
     <dimen name="wifi_assistant_padding_top_bottom">16dp</dimen>
