Add work profile badge for icon of free up space
- Get badged icon from target app.
- Add card_preference layout file to align icon & text
  with other Preference.

Bug: 192555970
Test: manual visual
Change-Id: Id98d05e8871032ad61627783b8e47bfee1363448

--- a/res/layout/card_preference_layout.xml
+++ b/res/layout/card_preference_layout.xml
@@ -29,5 +29,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="-8dp"
-        layout="@layout/settingslib_preference"/>
+        layout="@layout/card_preference"/>
 </com.google.android.material.card.MaterialCardView>
