Update category title for unused apps
Forgot to update "Unused apps" category title to "Unused app settings"
in previous CL so do that here.

Bug: 201759939
Test: manual
Change-Id: I67b9668f8b9caae9f144afce0e3e6d201d9b8f41

--- a/res/xml/app_info_settings.xml
+++ b/res/xml/app_info_settings.xml
@@ -141,7 +141,7 @@
 
     <PreferenceCategory
         android:key="app_hibernation_info"
-        android:title="@string/unused_apps"
+        android:title="@string/unused_apps_category"
         settings:controller=
             "com.android.settings.applications.appinfo.AppHibernationPreferenceCategoryController">
 
