--- a/res/xml/security_advanced_settings.xml
+++ b/res/xml/security_advanced_settings.xml
@@ -27,7 +27,8 @@
     <!-- Main security section - for trust agents added in code. -->
     <PreferenceCategory
         android:order="10"
-        android:key="security_category" />
+        android:key="security_category"
+        android:layout="@layout/preference_category_no_label" />
 
     <PreferenceCategory
         android:order="40"
