Fine tune background color for dual pane in homepage
Follow the spec and change the background color.

Test: See the screen
Bug: 223329504
Change-Id: Ibcbf0e898ae949e1354f5af810a2347eba42b508

--- a/res/layout/settings_homepage_app_bar_two_pane_layout.xml
+++ b/res/layout/settings_homepage_app_bar_two_pane_layout.xml
@@ -17,11 +17,10 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?androidprv:attr/colorSurface"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/settings_two_pane_background_color">
 
     <FrameLayout
         android:id="@+id/two_pane_suggestion_content"
