--- a/res/xml/app_locale_details.xml
+++ b/res/xml/app_locale_details.xml
@@ -19,6 +19,12 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/app_locale_picker_title">
 
+    <com.android.settingslib.widget.BannerMessagePreference
+        android:key="key_warnings"
+        android:icon="@drawable/ic_error_outline"
+        android:title="@string/warnings_title"
+        android:summary="@string/warnings_summary"/>
+
     <com.android.settingslib.widget.LayoutPreference
         android:key="app_locale_description"
         android:layout="@layout/app_locale_details_description"
