--- a/res/values-fi/arrays.xml
+++ b/res/values-fi/arrays.xml
@@ -377,7 +377,7 @@
     <item msgid="2390008695651897663">"Sans Serif, tiivistetty"</item>
     <item msgid="2396492419730702454">"Sans Serif, tasalevyinen"</item>
     <item msgid="8199675052804786099">"Serif"</item>
-    <item msgid="4554123140736897688">"Serif Monospace"</item>
+    <item msgid="4554123140736897688">"Serif, tasalevyinen"</item>
     <item msgid="5485652650875486635">"Casual"</item>
     <item msgid="1071057864355989694">"Kursiivi"</item>
     <item msgid="5012882784126308133">"Isot kirjaimet"</item>
