Avoid accessibility pages display on notification bar in setup
Root cause: ag/7505195 introduce to set clipToPadding false on scrollView to make it extend below navbar to overlaps with sibling views. In this case anything pinned on top of screen (switchbar, pinned header for most UIs, and preview indicator for font size page).So, the recycler draw content outside of its bounds.
Solution: Defines whether a child is limited to draw inside of its bounds and the ViewGroup will clip its drawing surface so as to exclude the padding area for SuW flow.

Bug: 227349626
Bug: 227409455
Bug: 222022439
Test: Manual testing
Change-Id: I439508c8e8c90e7303a72a4990c7ef1b9e5bc19d

--- a/res/values/themes_suw.xml
+++ b/res/values/themes_suw.xml
@@ -246,6 +246,8 @@
 
     <!-- This theme was applied to Settings pages which are running under SUW. -->
     <style name="SettingsPreferenceTheme.SetupWizard" parent="@style/PreferenceTheme.SettingsLib">
+        <item name="android:clipToPadding">true</item>
+        <item name="android:clipChildren">true</item>
         <item name="android:textAppearanceListItem">@style/TextAppearance.PreferenceTitle.SettingsLib</item>
         <item name="android:listPreferredItemPaddingStart">@dimen/settingslib_listPreferredItemPaddingStart</item>
         <item name="android:listPreferredItemPaddingEnd">16dp</item>
