Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ia56e96f0f7b667a6811440e12e3caab7dee7548e

--- a/res/values-te/arrays.xml
+++ b/res/values-te/arrays.xml
@@ -291,7 +291,7 @@
     <item msgid="3868809525697401379">"నిల్వలో రాయడం"</item>
     <item msgid="2504191192460059817">"స్క్రీన్‌ను ఆన్ చేయడం"</item>
     <item msgid="7905819538788103556">"ఖాతాలను పొందడం"</item>
-    <item msgid="1675025662248079254">"నేపథ్యంలో అమలు చేయడం"</item>
+    <item msgid="1675025662248079254">"బ్యాక్‌గ్రౌండ్‌లో అమలు చేయడం"</item>
     <item msgid="2553974920157061225">"యాక్సెస్ సామర్థ్య వాల్యూమ్"</item>
   </string-array>
   <string-array name="app_ops_labels">
@@ -358,7 +358,7 @@
     <item msgid="555939881912035315">"నిల్వలో రాయడం"</item>
     <item msgid="4281352581602735717">"స్క్రీన్‌ను ఆన్ చేయడం"</item>
     <item msgid="346122795998225472">"ఖాతాలను పొందడం"</item>
-    <item msgid="3756073389408535680">"నేపథ్యంలో అమలు చేయడం"</item>
+    <item msgid="3756073389408535680">"బ్యాక్‌గ్రౌండ్‌లో అమలు చేయడం"</item>
     <item msgid="2114661179947426734">"యాక్సెస్ సామర్థ్య వాల్యూమ్"</item>
   </string-array>
   <string-array name="long_press_timeout_selector_titles">
@@ -413,9 +413,9 @@
   <string-array name="captioning_preset_selector_titles">
     <item msgid="3880932435325583041">"యాప్ ప్రకారం సెట్ చేయండి"</item>
     <item msgid="8719204526359229387">"నల్ల బ్యాక్‌గ్రౌండ్‌లో తెల్ల రంగు"</item>
-    <item msgid="5410164687403735103">"తెలుపు నేపథ్యంలో నలుపు రంగు"</item>
-    <item msgid="1119043472912497241">"నలుపు నేపథ్యంలో పసుపు రంగు"</item>
-    <item msgid="2836895041823327816">"నీలి నేపథ్యంలో పసుపు రంగు"</item>
+    <item msgid="5410164687403735103">"తెలుపు బ్యాక్‌గ్రౌండ్‌లో నలుపు రంగు"</item>
+    <item msgid="1119043472912497241">"నలుపు బ్యాక్‌గ్రౌండ్‌లో పసుపు రంగు"</item>
+    <item msgid="2836895041823327816">"నీలి బ్యాక్‌గ్రౌండ్‌లో పసుపు రంగు"</item>
     <item msgid="747238414788976867">"అనుకూలం"</item>
   </string-array>
   <string-array name="accessibility_button_location_selector_titles">
