Add the title of the SettingsMainSwitchPreference in the mobile_network_settings.xml to avoid the preference can not be indexed.
Fix: 222021677
Test: manually test and review the UI
Change-Id: I53b1637e845489bc1df2e7b4216c56400fd28659

--- a/res/xml/mobile_network_settings.xml
+++ b/res/xml/mobile_network_settings.xml
@@ -20,6 +20,7 @@
 
     <com.android.settings.widget.SettingsMainSwitchPreference
         android:key="use_sim_switch"
+        android:title="@string/mobile_network_use_sim_on"
         settings:controller="com.android.settings.network.telephony.MobileNetworkSwitchController"/>
 
     <PreferenceCategory
