Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I593a171f3dc0d3b1bd530985f9e3c02b2e923287

--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -362,9 +362,9 @@
     <item msgid="2114661179947426734">"Громкость подсказок"</item>
   </string-array>
   <string-array name="long_press_timeout_selector_titles">
-    <item msgid="6926391290986427331">"Небольшая"</item>
+    <item msgid="6926391290986427331">"Короткая"</item>
     <item msgid="5118829513010894576">"Средняя"</item>
-    <item msgid="6740026006576843477">"Большая"</item>
+    <item msgid="6740026006576843477">"Длительная"</item>
   </string-array>
   <string-array name="long_press_timeout_selector_list_titles">
     <item msgid="8908021508913038488">"Короткая задержка"</item>
@@ -524,7 +524,7 @@
     <item msgid="3761390980253394079">"Светлая"</item>
   </string-array>
   <string-array name="autofill_logging_level_entries">
-    <item msgid="2263571982739726576">"Отключено"</item>
+    <item msgid="2263571982739726576">"Отключен"</item>
     <item msgid="4295717421282345505">"Сведения об отладке"</item>
     <item msgid="8657797891533816070">"Подробная информация"</item>
   </string-array>
