--- a/res/values-lt/arrays.xml
+++ b/res/values-lt/arrays.xml
@@ -367,9 +367,9 @@
     <item msgid="6740026006576843477">"Ilga"</item>
   </string-array>
   <string-array name="long_press_timeout_selector_list_titles">
-    <item msgid="8908021508913038488">"Trumpas"</item>
-    <item msgid="7397961711906421599">"Vidutinis"</item>
-    <item msgid="4079132024502041928">"Ilgas"</item>
+    <item msgid="8908021508913038488">"Trumpa"</item>
+    <item msgid="7397961711906421599">"Vidutinė"</item>
+    <item msgid="4079132024502041928">"Ilga"</item>
   </string-array>
   <string-array name="captioning_typeface_selector_titles">
     <item msgid="2166553138528640250">"Numatytasis"</item>
