--- a/res/values-te/arrays.xml
+++ b/res/values-te/arrays.xml
@@ -367,7 +367,7 @@
     <item msgid="6740026006576843477">"ఎక్కువ సేపు"</item>
   </string-array>
   <string-array name="long_press_timeout_selector_list_titles">
-    <item msgid="8908021508913038488">"చిన్నగా"</item>
+    <item msgid="8908021508913038488">"తక్కువగా"</item>
     <item msgid="7397961711906421599">"మధ్యస్థంగా"</item>
     <item msgid="4079132024502041928">"ఎక్కువగా"</item>
   </string-array>
