Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I7179232add1c70bac6985a6269322e5100cbbf39

--- a/res/values-hi/arrays.xml
+++ b/res/values-hi/arrays.xml
@@ -485,7 +485,7 @@
     <item msgid="8186970968968646288">"संचित (खाली)"</item>
   </string-array>
   <string-array name="color_picker">
-    <item msgid="7216413848731287689">"स्यान"</item>
+    <item msgid="7216413848731287689">"नीला-हरा"</item>
     <item msgid="5661027589207588703">"नीला"</item>
     <item msgid="1219738214736244749">"हरा"</item>
     <item msgid="6331809026622602308">"बैंगनी"</item>
