--- a/res/values-uk/arrays.xml
+++ b/res/values-uk/arrays.xml
@@ -509,7 +509,7 @@
     <item msgid="2047166446768045816">"Вважати нетарифікованою"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="3485945604919292489">"Використовувати довільну MAC-адресу (за умовчанням)"</item>
+    <item msgid="3485945604919292489">"Довільна MAC-адреса (за умовчанням)"</item>
     <item msgid="741680937828608749">"Використовувати MAC-адресу пристрою"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
