Add Settings for vector-specific PointerIcon stroke colors.
Bug: 305193969
Test: PointerIconLoadingTest
Flag: android.view.flags.enable_vector_cursor_a11y_settings
Change-Id: I72213e8806fed451a0edb16d497406ffae5c1a44

--- a/res/xml/trackpad_settings.xml
+++ b/res/xml/trackpad_settings.xml
@@ -68,6 +68,12 @@
         android:order="50"
         settings:controller="com.android.settings.inputmethod.PointerFillStylePreferenceController"/>
 
+    <com.android.settings.inputmethod.PointerStrokeStylePreference
+        android:key="pointer_stroke_style"
+        android:title="@string/pointer_stroke_style"
+        android:order="60"
+        settings:controller="com.android.settings.inputmethod.PointerStrokeStylePreferenceController"/>
+
     <com.android.settings.widget.LabeledSeekBarPreference
         android:key="pointer_scale"
         android:title="@string/pointer_scale"
