--- a/res/layout/fingerprint_v2_udfps_enroll_enrolling.xml
+++ b/res/layout/fingerprint_v2_udfps_enroll_enrolling.xml
@@ -19,7 +19,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/udfps_layout"
-    style="?attr/fingerprint_layout_theme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -27,65 +26,57 @@
     <!-- This is used to grab style attributes and apply them
     to this layout -->
     <com.google.android.setupdesign.GlifLayout
-        android:id="@+id/dummy_glif_layout"
+        android:id="@+id/glif_layout"
         style="?attr/fingerprint_layout_theme"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
-        />
+        android:layout_weight="5"
+        >
 
-    <ImageView
-        android:id="@+id/sud_layout_icon"
-        style="@style/SudGlifIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitStart"
-        android:src="@drawable/ic_lock" />
+        <LinearLayout
+            style="@style/SudContentFrame"
+            android:id="@+id/sud_content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/SudGlifHeaderTitle"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:ellipsize="end"
-        android:lines="2"
-        />
-
-    <TextView
-        android:id="@+id/description"
-        style="@style/SudDescription.Glif"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:lines="3"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        />
-
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/illustration_lottie"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:scaleType="centerInside"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_speed=".85" />
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/illustration_lottie"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:scaleType="centerInside"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_speed=".85" />
+        </LinearLayout>
+    </com.google.android.setupdesign.GlifLayout>
 
     <FrameLayout
         android:id="@+id/layout_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_gravity="center_horizontal|bottom"
+        android:layout_weight="4"
         android:clipToPadding="false"
+        android:clipChildren="false"
         >
 
         <include layout="@layout/fingerprint_v2_udfps_enroll_view" />
-    </FrameLayout>
 
+        <Button
+            android:id="@+id/skip"
+            style="@style/SudGlifButton.Secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|left"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/security_settings_fingerprint_enroll_enrolling_skip" />
+
+    </FrameLayout>
 
 </LinearLayout>
