Add Device Diagnostics to Settings.
The new option will only appear if (1) the flag is enabled and (2)
DeviceDiagnostics.apk is landed on the device (which it is by default on
AOSP).

Bug: 309886423
Test: Build AOSP Pixel and launch Settings
Change-Id: If01d231664a301ff289d4da61445bf65a7506fdb

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -836,4 +836,7 @@
 
     <!-- The Activity intent to trigger to launch time-related feedback. -->
     <string name="config_time_feedback_intent_uri" translatable="false" />
+
+    <!-- Package name for diagnostics app. -->
+    <string name="config_device_diagnostics_package_name" translatable="false">com.android.devicediagnostics</string>
 </resources>
