Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Iabf9cc384edabd73c43f64406904f033203d0606

--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -169,8 +169,8 @@
     <item msgid="3205182755091629995">"राम्रो स्थान"</item>
     <item msgid="8952113542524604064">"GPS"</item>
     <item msgid="50701215019227883">"कम्पन"</item>
-    <item msgid="2690144000353492014">"सम्पर्कहरू पढ्नुहोस्"</item>
-    <item msgid="3858029424955955625">"सम्पर्कहरू परिमार्जन गर्नुहोस्"</item>
+    <item msgid="2690144000353492014">"कन्ट्याक्टहरू पढ्नुहोस्"</item>
+    <item msgid="3858029424955955625">"कन्ट्याक्टहरू परिमार्जन गर्नुहोस्"</item>
     <item msgid="3439658954936709507">"कल लग पढ्नुहोस्"</item>
     <item msgid="1908944516631132130">"कल लग परिमार्जन गर्नुहोस्"</item>
     <item msgid="9066115715905100138">"पात्रो पढ्नुहोस्"</item>
@@ -236,8 +236,8 @@
     <item msgid="364182753727575631">"स्थान"</item>
     <item msgid="5728662879095632194">"स्थान"</item>
     <item msgid="4104617224667554750">"भाइब्रेट गर्नुहोस्"</item>
-    <item msgid="1623646715189708947">"सम्पर्कहरू पढ्नुहोस्"</item>
-    <item msgid="5060760609109972207">"सम्पर्कहरू परिमार्जन गर्नुहोस्"</item>
+    <item msgid="1623646715189708947">"कन्ट्याक्टहरू पढ्नुहोस्"</item>
+    <item msgid="5060760609109972207">"कन्ट्याक्टहरू परिमार्जन गर्नुहोस्"</item>
     <item msgid="7451260062940797278">"कल लग पढ्नुहोस्"</item>
     <item msgid="2348589304974534308">"कल लग परिमार्जन गर्नुहोस्"</item>
     <item msgid="4089146706115315300">"पात्रो पढ्नुहोस्"</item>
