Adds modes settings page for bypassing apps
Adds the settings page that a user will reach from a mode settings page
when they tap on "App," to allow  them to select whether all, none, or
priority modes can break through and send notifications.

Bug: 308819928
Bug: 331267485
Flag: android.app.modes_ui DEVELOPMENT
Test: build and test, controller unit tests
Change-Id: I5bcebfca0fc2882f839afdced8d2b817dad14e6c

--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -30,6 +30,10 @@
                 android:title="@string/zen_category_people"/>
 
         <Preference
+            android:key="zen_mode_apps"
+            android:title="@string/zen_category_apps" />
+
+        <Preference
                 android:key="zen_other_settings"
                 android:title="@string/zen_category_exceptions" />
     </PreferenceCategory>
