--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -18,8 +18,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   android:title="@string/zen_modes_list_title" >
 
-    <!-- TODO: b/308819292 - implement page, delete this test preference -->
-    <Preference
-        android:key="zen_mode_test" />
+    <com.android.settingslib.widget.LayoutPreference
+            android:key="header"
+            android:layout="@layout/settings_entity_header" />
 
 </PreferenceScreen>
