Migrate people settings to new modes UI
Flag: android.app.modes_ui
Bug: 337079247
Test: make -j RunSettingsRoboTests ROBOTEST_FILTER=com.android.settings.notification.modes
Change-Id: If5e7b82a006e856b4aceca7acdfc8cc0d11092a7

--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -22,4 +22,8 @@
             android:key="header"
             android:layout="@layout/settings_entity_header" />
 
+    <Preference
+            android:key="zen_mode_people"
+            android:title="@string/zen_category_people"/>
+
 </PreferenceScreen>
