--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -26,4 +26,8 @@
             android:key="zen_mode_people"
             android:title="@string/zen_category_people"/>
 
+    <Preference
+            android:key="zen_other_settings"
+            android:title="@string/zen_category_exceptions" />
+
 </PreferenceScreen>
