--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -346,7 +346,7 @@
     <item msgid="5410164687403735103">"सेतोमा कालो"</item>
     <item msgid="1119043472912497241">"कालोमा पहेँलो"</item>
     <item msgid="2836895041823327816">"नीलोमा पहेँलो"</item>
-    <item msgid="747238414788976867">"आफू अनुकूल"</item>
+    <item msgid="747238414788976867">" कस्टम"</item>
   </string-array>
   <string-array name="accessibility_button_location_selector_titles">
     <item msgid="6485511780196327736">"अन्य एपहरूमाथि तैरने"</item>
