--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -22,12 +22,23 @@
             android:key="header"
             android:layout="@layout/settings_entity_header" />
 
-    <Preference
-            android:key="zen_mode_people"
-            android:title="@string/zen_category_people"/>
+    <PreferenceCategory
+            android:title="@string/mode_interruption_filter_title"
+            android:key="modes_filters">
+        <Preference
+                android:key="zen_mode_people"
+                android:title="@string/zen_category_people"/>
 
-    <Preference
-            android:key="zen_other_settings"
-            android:title="@string/zen_category_exceptions" />
+        <Preference
+                android:key="zen_other_settings"
+                android:title="@string/zen_category_exceptions" />
+    </PreferenceCategory>
 
+    <PreferenceCategory
+            android:title="@string/mode_device_effects_title"
+            android:key="modes_additional_actions">
+        <Preference
+                android:key="mode_display_settings"
+                android:title="@string/mode_display_settings_title" />
+    </PreferenceCategory>
 </PreferenceScreen>
