Revert "Fix "Free up space" not clickable issue"
Revert submission 27450348-cherrypicker-L62500030004014460:N91700030063291466

Reason for revert: Droidmonitor triggered revert due to build breakage in b/342043629. Will be verifying through ABTD before submission.

Reverted changes: /q/submissionid:27450348-cherrypicker-L62500030004014460:N91700030063291466

Change-Id: Ifaf5fbee7f18719e89d5278585ae80bed3808bb5

--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -33,7 +33,7 @@
         android:selectable="false"
         settings:searchable="false" />
 
-    <com.android.settings.widget.TipCardPreference
+    <com.android.settings.widget.CardPreference
         android:key="battery_tip"
         android:title="@string/summary_placeholder"
         settings:controller="com.android.settings.fuelgauge.batterytip.BatteryTipPreferenceController" />
