Add button for activating modes manually
Fixes: 308819907
Flag: android.app.modes_ui
Test: ZenModeButtonPreferenceControllerTest
Test: atest com.android.settings.notification.modes
Change-Id: Id018d360c648dd948d2f950ca67cfbea71cc5c68

--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -22,6 +22,11 @@
             android:key="header"
             android:layout="@layout/settings_entity_header" />
 
+    <com.android.settingslib.widget.LayoutPreference
+            android:key="activate"
+            android:selectable="false"
+            android:layout="@layout/modes_activation_button"/>
+
     <PreferenceCategory
             android:title="@string/mode_interruption_filter_title"
             android:key="modes_filters">
