--- a/res/layout/private_space_education_screen.xml
+++ b/res/layout/private_space_education_screen.xml
@@ -81,6 +81,23 @@
                 android:layout_toRightOf="@+id/appsIcon"
                 android:text="@string/private_space_install_apps_text"/>
         </RelativeLayout>
+        <TextView
+            style="@style/PrivateSpaceSetupSubHeaderStyle"
+            android:text="@string/private_space_keep_in_mind_text"/>
+        <RelativeLayout
+            style="@style/PrivateSpaceSetupBulletPointLayoutStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/eduIcon"
+                style="@style/PrivateSpaceBulletPointIconStyle"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_private_space_edu_icon" />
+            <TextView
+                style="@style/PrivateSpaceBulletPointTextFontStyle"
+                android:layout_toRightOf="@+id/eduIcon"
+                android:text="@string/private_space_apps_stopped_text"/>
+        </RelativeLayout>
         <Space
             android:layout_width="wrap_content"
             android:layout_height="16dp"/>
