Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I538f774862561a3af25bb1ddc6f08f295603e9a6

--- a/res/values-es-rUS/arrays.xml
+++ b/res/values-es-rUS/arrays.xml
@@ -338,8 +338,8 @@
     <item msgid="4224714345662348668">"Ninguno"</item>
     <item msgid="4132127611510627490">"Contorno"</item>
     <item msgid="1226216870460161087">"Sombra paralela"</item>
-    <item msgid="2328414188644618697">"Elevado"</item>
-    <item msgid="7758730980218689351">"Disminuido"</item>
+    <item msgid="2328414188644618697">"En relieve"</item>
+    <item msgid="7758730980218689351">"Hundido"</item>
   </string-array>
   <string-array name="captioning_opacity_selector_titles">
     <item msgid="1140998823196874513">"25 %"</item>
@@ -495,9 +495,6 @@
     <item msgid="7025253383416830453">"Después de 1 minuto"</item>
     <item msgid="1574040255478150028">"Después de 5 minutos"</item>
   </string-array>
-    <!-- no translation found for notification_polite_options:0 (4617190141263245257) -->
-    <!-- no translation found for notification_polite_options:1 (3884076684767467743) -->
-    <!-- no translation found for notification_polite_options:2 (8765197536079931966) -->
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
