Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I76ef7a226e3077feca39fe7404c7ab6fd423770c

--- a/res/values-zu/arrays.xml
+++ b/res/values-zu/arrays.xml
@@ -262,7 +262,7 @@
     <item msgid="9189359977063200554">"Thumela i-SMS/MMS"</item>
     <item msgid="6954817837534799424">"Funda i-SMS/MMS"</item>
     <item msgid="7921014514153395846">"Bhala i-SMS/MMS"</item>
-    <item msgid="8997371825401751421">"Shintsha izilungiselelo"</item>
+    <item msgid="8997371825401751421">"Shintsha amasethingi"</item>
     <item msgid="7005755175240764443">"Dweba ngaphezulu"</item>
     <item msgid="8267704990417682222">"Finyelela kuzaziso"</item>
     <item msgid="3180676986290096851">"Ikhamera"</item>
