Fix to display text properly in PS education screen
This changes the style for text in private space education screen
bullet point to fix the text not displaying properly in unfolded mode of
Pixel fold.

Recording: b/340231182#comment4

Bug: 340231182
Test: Manual
Change-Id: I4da02da6ddf6b4f048cc58331d14cda389f13dec

--- a/res/layout/private_space_education_screen.xml
+++ b/res/layout/private_space_education_screen.xml
@@ -30,6 +30,7 @@
         android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/sud_layout_icon_container"
+        style="@style/SudContentFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -37,8 +38,6 @@
             android:id="@+id/lottie_animation"
             style="@style/SudContentIllustration"
             android:layout_width="match_parent"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
             android:layout_height="match_parent"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
