Load zen mode type icon options from the proper resources
* Move default mode icons from Settings res to core res.
* Add array resources for the icon options and their descriptions.
* As the initial version of the list, use the default mode icons.

Bug: 333901673
Test: atest IconOptionsProviderImplTest
Flag: android.app.modes_ui
Change-Id: I66669e67a9d607268c05d5ed3df6c9555e57864c

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1525,4 +1525,31 @@
         <item>2</item>
     </string-array>
 
+    <!-- TODO: b/333901673 - Get full icon list. -->
+    <array name="zen_mode_icon_options" translatable="false">
+        <item>@*android:drawable/ic_zen_mode_type_bedtime</item>
+        <item>@*android:drawable/ic_zen_mode_type_driving</item>
+        <item>@*android:drawable/ic_zen_mode_type_immersive</item>
+        <item>@*android:drawable/ic_zen_mode_type_managed</item>
+        <item>@*android:drawable/ic_zen_mode_type_other</item>
+        <item>@*android:drawable/ic_zen_mode_type_schedule_calendar</item>
+        <item>@*android:drawable/ic_zen_mode_type_schedule_time</item>
+        <item>@*android:drawable/ic_zen_mode_type_theater</item>
+        <item>@*android:drawable/ic_zen_mode_type_unknown</item>
+    </array>
+
+    <!-- TODO: b/333901673 - Complete list -->
+    <!-- Descriptions of the icons in zen_mode_icon_options. Should describe the associated image
+         [CHAR LIMIT=NONE] -->
+    <string-array name="zen_mode_icon_options_descriptions">
+        <item>Bedtime</item>
+        <item>Driving</item>
+        <item>Immersive</item>
+        <item>Managed</item>
+        <item>Star</item>
+        <item>Calendar</item>
+        <item>Time</item>
+        <item>Theater</item>
+        <item>Flower</item>
+    </string-array>
 </resources>
