Center align illustration is PS setup screen for tablet
Change made in large screen layout for PS setup screens.
With this change spacing added between the screen title and Illustration
is removed and the illustration is center aligned.

Screenshots:
Tablet
go/ss/Ayvv8YY6yvVoMz4.png
go/ss/6wG342eU64vKdSn.png
go/ss/4H56h5avo7yz9Wz.png

Fold:
go/ss/8xeGeyCYktSzbyc.png
go/ss/97oJmyh6U7fpX8B.png
go/ss/3qmWn4QVB6VPegU.png
go/ss/3KEk3HJ4i7h8jsL.png

Bug: 336235352
Test: Manual
Change-Id: I77148b8b33007a1b29f99fe7bdf3bbc58a9de3aa

--- a/res/layout-sw600dp/private_space_setup_success.xml
+++ b/res/layout-sw600dp/private_space_setup_success.xml
@@ -28,11 +28,8 @@
         android:id="@+id/sud_layout_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <Space
-            android:id="@+id/space1"
-            android:layout_width="1dp"
-            android:layout_height="@dimen/private_space_sud_items_margin_inbetween"/>
+        android:orientation="vertical"
+        android:gravity="center">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,8 +37,8 @@
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottie_animation"
                 style="@style/SudContentIllustration"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/private_space_illustration"/>
