--- a/res/values-tl/arrays.xml
+++ b/res/values-tl/arrays.xml
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"Oras ng pagtulog"</item>
+    <item msgid="4152450357280759894">"Pagmamaneho"</item>
+    <item msgid="7096549258219399423">"Immersive"</item>
+    <item msgid="2760716776980432977">"Pinamamahalaan"</item>
+    <item msgid="601734478369121764">"Bituin"</item>
+    <item msgid="6243809315432780521">"Kalendaryo"</item>
+    <item msgid="4913577903148415331">"Oras"</item>
+    <item msgid="3653377604690057780">"Teatro"</item>
+    <item msgid="3843711267408385410">"Bulaklak"</item>
+  </string-array>
 </resources>
