[Dev option] Add a dev option to enable DW.
Default value of this dev options solely depends on
enable_desktop_windowing_mode, which is intended

Toggle is shown only if DW is eligible on device

Currently this option only overrides features guarded by
enable_desktop_windowing_mode, later on it will be used to override a
few other DW features

Test: Added tests. Locally tested CUJs
Bug: 348186127
Bug: 348193756
Flag: com.android.window.flags.show_desktop_windowing_dev_option

Change-Id: I1c1f946b586a5ca0440b29879925ba1a624717aa

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -738,6 +738,11 @@
             android:summary="@string/force_resizable_activities_summary" />
 
         <SwitchPreferenceCompat
+            android:key="override_desktop_mode_features"
+            android:title="@string/enable_desktop_mode"
+            android:summary="@string/enable_desktop_mode_summary" />
+
+        <SwitchPreferenceCompat
             android:key="enable_freeform_support"
             android:title="@string/enable_freeform_support"
             android:summary="@string/enable_freeform_support_summary" />
