[Homepage revamp] Adjust the padding of Search bar in the homepage container.
Bug: 340773713
Test: visual
Flag: com.android.settings.flags.homepage_revamp
Change-Id: I3fc8a8f56ba8e8c401e907fbb45fc980eb335538

--- a/res/layout/settings_homepage_container_v2.xml
+++ b/res/layout/settings_homepage_container_v2.xml
@@ -69,8 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="8dp"
-            android:paddingBottom="24dp"
+            android:paddingVertical="8dp"
             android:paddingStart="?android:attr/listPreferredItemPaddingStart"
             android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
 
