--- a/res/values-fa/arrays.xml
+++ b/res/values-fa/arrays.xml
@@ -195,9 +195,9 @@
     <item msgid="3843484466100107397">"فوکوس صدا"</item>
     <item msgid="617344340943430125">"میزان کنترل"</item>
     <item msgid="1249691739381713634">"میزان صدا"</item>
-    <item msgid="6485000384018554920">"حجم حلقه"</item>
+    <item msgid="6485000384018554920">"صدای زنگ"</item>
     <item msgid="3378000878531336372">"میزان صدای رسانه"</item>
-    <item msgid="5272927168355895681">"میزان صدای زنگ ساعت"</item>
+    <item msgid="5272927168355895681">"صدای زنگ هشدار"</item>
     <item msgid="4422070755065530548">"میزان صدای اعلان"</item>
     <item msgid="3250654589277825306">"میزان صدای بلوتوث"</item>
     <item msgid="4212187233638382465">"بیدار باش"</item>
@@ -262,9 +262,9 @@
     <item msgid="5651140069431283570">"فوکوس صدا"</item>
     <item msgid="745291221457314879">"میزان صدای اصلی"</item>
     <item msgid="4722479281326245754">"میزان صدای مکالمه"</item>
-    <item msgid="6749550886745567276">"میزان صدای زنگ"</item>
+    <item msgid="6749550886745567276">"صدای زنگ"</item>
     <item msgid="2218685029915863168">"میزان صدای رسانه"</item>
-    <item msgid="4266577290496513640">"میزان صدای زنگ ساعت"</item>
+    <item msgid="4266577290496513640">"صدای زنگ هشدار"</item>
     <item msgid="8608084169623998854">"میزان صدای اعلان"</item>
     <item msgid="7948784184567841794">"میزان صدای بلوتوث"</item>
     <item msgid="1148968792599973150">"بیدار باش"</item>
