Show bundles separately from other channels
Fixes: 346612561
Test: BundleListPreferenceControllerTest
Flag: android.service.notification.notification_classification
Change-Id: I2371219822f6a777788147e8249ca1e3b29d40ba

--- a/res/xml/app_notification_settings.xml
+++ b/res/xml/app_notification_settings.xml
@@ -50,6 +50,12 @@
         settings:controller="com.android.settings.notification.app.BubbleSummaryPreferenceController">
     </Preference>
 
+    <!-- Bundles added here -->
+    <PreferenceCategory
+        android:key="bundles"
+        android:title="@string/notification_bundles"
+        android:visibility="gone" />
+
     <!-- Channels/Channel groups added here -->
     <PreferenceCategory
         android:key="channels"
