Fix to hide Display over other apps permission setting for the Scone application.
Flag: EXEMPT bugfix

Bug: 349195999
Test: manually testing that the setting is removed from Adaptive
Connectivity Services advanced settings page.

Change-Id: I3f306d24040f500c7fed4f44309e9f58f5f766be

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1552,4 +1552,8 @@
         <item>Theater</item>
         <item>Flower</item>
     </string-array>
+
+    <!-- Packages that will not show Display over other apps permission -->
+    <string-array name="display_over_apps_permission_change_exempt">
+    </string-array>
 </resources>
