--- a/res/xml/modes_edit_name_icon.xml
+++ b/res/xml/modes_edit_name_icon.xml
@@ -18,20 +18,30 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
-    android:key="zen_mode_icon_picker_page"
+    android:key="zen_mode_edit_name_icon"
     settings:searchable="false"
-    android:title="@string/zen_mode_icon_picker_title">
+    android:title="@string/zen_mode_rename_title">
 
     <com.android.settingslib.widget.LayoutPreference
-        android:key="current_icon"
+        android:key="chosen_icon"
         android:layout="@layout/settings_entity_header" />
 
     <com.android.settings.applications.SpacePreference
         android:layout_height="16dp" />
 
     <com.android.settingslib.widget.LayoutPreference
+        android:key="name"
+        android:layout="@layout/modes_edit_name" />
+
+    <com.android.settings.applications.SpacePreference
+        android:layout_height="32dp" />
+
+    <com.android.settingslib.widget.LayoutPreference
         android:key="icon_list"
         android:selectable="false"
         android:layout="@layout/modes_icon_list"/>
 
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="done"
+        android:layout="@layout/modes_edit_done_button" />
 </PreferenceScreen>
