Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I00511e116b9ca82ff0e69e1c919c3cceafc35935

--- a/res/values-zu/arrays.xml
+++ b/res/values-zu/arrays.xml
@@ -509,4 +509,6 @@
     <item msgid="3653377604690057780">"Itiyetha"</item>
     <item msgid="3843711267408385410">"Imbali"</item>
   </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
+  </string-array>
 </resources>
