--- a/res/values-as/arrays.xml
+++ b/res/values-as/arrays.xml
@@ -509,4 +509,6 @@
     <item msgid="3653377604690057780">"থিয়েটাৰ"</item>
     <item msgid="3843711267408385410">"ফুল"</item>
   </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
+  </string-array>
 </resources>
