--- a/res/values-my/arrays.xml
+++ b/res/values-my/arrays.xml
@@ -509,4 +509,6 @@
     <item msgid="3653377604690057780">"ပြဇာတ်ရုံ"</item>
     <item msgid="3843711267408385410">"ပန်းပွင့်"</item>
   </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
+  </string-array>
 </resources>
