Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I72f168896fd064fc07902b1b651b3c7ea96a1402

--- a/res/values-fr-rCA/arrays.xml
+++ b/res/values-fr-rCA/arrays.xml
@@ -86,7 +86,7 @@
     <item msgid="6702740528496186521">"5"</item>
   </string-array>
   <string-array name="bluetooth_audio_routing_titles">
-    <item msgid="3488687531285795335">"Utiliser la valeur par défaut de l\'application"</item>
+    <item msgid="3488687531285795335">"Utiliser la valeur par défaut de l\'appli"</item>
     <item msgid="5112879855377353813">"Faire jouer sur l\'appareil auditif"</item>
     <item msgid="4853360663119482646">"Faire jouer sur le haut-parleur du téléphone"</item>
   </string-array>
@@ -336,7 +336,7 @@
     <item msgid="3237802033158517495">"100 %"</item>
   </string-array>
   <string-array name="captioning_preset_selector_titles">
-    <item msgid="3880932435325583041">"Défini par l\'application"</item>
+    <item msgid="3880932435325583041">"Défini par l\'appli"</item>
     <item msgid="8719204526359229387">"Texte blanc sur fond noir"</item>
     <item msgid="5410164687403735103">"Texte noir sur fond blanc"</item>
     <item msgid="1119043472912497241">"Texte jaune sur fond noir"</item>
@@ -468,7 +468,7 @@
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
   <string-array name="nfc_payment_favor">
     <item msgid="9104058551372383947">"Toujours"</item>
-    <item msgid="5283665583617307336">"Sauf si une autre application de paiement est ouverte"</item>
+    <item msgid="5283665583617307336">"Sauf si une autre appli de paiement est ouverte"</item>
   </string-array>
   <string-array name="nfc_payment_favor_values">
     <item msgid="2373999996715432397">"0"</item>
