--- a/res/values-hr/arrays.xml
+++ b/res/values-hr/arrays.xml
@@ -352,8 +352,8 @@
     <item msgid="6922258575853746220">"Pokret"</item>
   </string-array>
   <string-array name="accessibility_button_size_selector_titles">
-    <item msgid="7482952318152486459">"Malen"</item>
-    <item msgid="1666628329913333563">"Velik"</item>
+    <item msgid="7482952318152486459">"Maleno"</item>
+    <item msgid="1666628329913333563">"Veliko"</item>
   </string-array>
   <string-array name="vpn_proxy_settings">
     <item msgid="7165538292837266997">"Nijedan"</item>
