Add Mouse keys A11Y settings to PK settings page
Add the mouse keys toggle in the Settings under
System > Keybord > Physical Keyboard > Mouse Keys.
The toggle is shown when a physical keyboard is connected.

DD: go/mouse-keys-android
Bug: 341799888
Flag: com.android.hardware.input.keyboard_a11y_mouse_keys
Test: manual
Steps:
1. Connect a physical keyboard
2. Toggle the mouse keys setting to switch on the feature.
3. Mouse keys is enabled.
4. Switch off the mouse keys toggle under the setting.
5. Mouse keys is disabled.

Change-Id: Ifda8c93fcc1f8b7c1fb2eccb7c91266360ff1fc8

--- a/res/xml/physical_keyboard_settings.xml
+++ b/res/xml/physical_keyboard_settings.xml
@@ -53,5 +53,11 @@
             android:title="@string/slow_keys"
             android:defaultValue="false" />
 
+        <SwitchPreferenceCompat
+            android:key="accessibility_mouse_keys"
+            android:title="@string/mouse_keys"
+            android:summary="@string/mouse_keys_summary"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
 </PreferenceScreen>
