Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ic36c209805a453537b7de990a9645a1aab79e6d6

--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -269,7 +269,7 @@
     <item msgid="7948784184567841794">"Volume Bluetooth"</item>
     <item msgid="1148968792599973150">"Mantieni attivo"</item>
     <item msgid="8482874682804856549">"Posizione"</item>
-    <item msgid="5186169827582545242">"Geolocalizzazione"</item>
+    <item msgid="5186169827582545242">"Posizione"</item>
     <item msgid="6122293931012635638">"Ricevi statistiche sull\'utilizzo"</item>
     <item msgid="2526677383312751932">"Attiva/disattiva microfono"</item>
     <item msgid="4000577305179914546">"Visualizzazione dell\'avviso popup"</item>
