Show icons for allowed sounds
(Some icons are temporary, until we get the final assets)

Also some fixes/improvements to CircularIconsPreference:
* Show the correct placeholder and +N icons.
* Fix the displayIcons-before-measure case (global layout listener was incorrect).
* Properly cancel pending image load futures (field didn't point to the actual future).
* Don't reload icons if it's the same set (depends on equals() for the items, so unfortunately doesn't work for AppEntry yet).

Test: atest com.android.settings.notification.modes
Bug: 346551087
Flag: android.app.modes_ui
Change-Id: I9d029a5fdd785ada4e2ba4d8a90eba72b5fb9085

--- a/res/layout/preference_circular_icons_plus_item.xml
+++ b/res/layout/preference_circular_icons_plus_item.xml
@@ -15,10 +15,18 @@
   limitations under the License.
   -->
 
-<ImageView
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
     android:layout_width="@dimen/zen_mode_circular_icon_diameter"
     android:layout_height="@dimen/zen_mode_circular_icon_diameter"
     android:layout_marginTop="@dimen/zen_mode_circular_icon_margin_vertical"
     android:layout_marginBottom="@dimen/zen_mode_circular_icon_margin_vertical"
-    android:layout_marginEnd="@dimen/zen_mode_circular_icon_margin_between" />
+    android:gravity="center"
+    android:padding="4dp"
+    android:drawablePadding="0dp"
+    android:background="@drawable/preference_circular_icons_plus_item_background"
+    android:textColor="?androidprv:attr/materialColorOnSecondaryContainer"
+    android:maxLines="1"
+    android:autoSizeTextType="uniform"
+    android:autoSizeMinTextSize="6sp" />
