Add accessibility label for "QR code" image. Also added landscape mode.
Test: atest
Bug: 354116021
Flag: com.android.settingslib.flags.enable_le_audio_sharing
Change-Id: Ide20e07f38660ef7f444fbe3b20d3364b9951e02

--- a/res/layout/bluetooth_audio_streams_qr_code.xml
+++ b/res/layout/bluetooth_audio_streams_qr_code.xml
@@ -47,7 +47,9 @@
             <ImageView
                 android:id="@+id/qrcode_view"
                 android:layout_width="@dimen/qrcode_size"
-                android:layout_height="@dimen/qrcode_size"/>
+                android:layout_height="@dimen/qrcode_size"
+                android:contentDescription="@string/audio_streams_qr_code_page_image_label"
+                android:focusable="true"/>
 
             <TextView
                 android:id="@+id/password"
