[Audiosharing] Use a11y compliant color for dialog buttons
Fix: 353907942
Test: manual
Flag: com.android.settingslib.flags.enable_le_audio_sharing
Change-Id: Ib034f66db0e3685458c51e0a9cbe9b534c205a69

--- a/res/layout/dialog_custom_body_audio_sharing.xml
+++ b/res/layout/dialog_custom_body_audio_sharing.xml
@@ -15,7 +15,9 @@
   ~ limitations under the License.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="none">
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
+            android:textColor="?androidprv:attr/textColorOnAccent"
             android:background="@drawable/audio_sharing_rounded_bg_ripple"
             android:visibility="gone" />
 
@@ -70,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
+            android:textColor="?androidprv:attr/textColorOnAccent"
             android:background="@drawable/audio_sharing_rounded_bg_ripple"
             android:visibility="gone" />
     </LinearLayout>
